@startuml
!pragma layout smetana
class User {
  userId
  email
  password
  phoneNumber
}

class Carport {
  carportid
  carportwidth
  carportlength
  carportheight
  roofType
  shedId

}

class Order {
  orderId
  orderDate
  orderPrice
  paymentStatus
  userId
  carportId
  quoteId
}

class Orderdetails {
  orderDetailId
  orderId
  quantity
  materialId
}

class Shed {
  shedId
  width
  length
}

class Quote {
  quoteId
  validityPeriod
  price
  dateCreated
  isAccepted
}

class Materials {
  materialId
  productName
  productDescription
  productUnit
  productAmount
  productLength
  buyPrice
}

' Relationer
User "1" -- "0..*" Order : places >
Order "1" -- "1" Carport : includes >
Order "1" -- "1" Quote : has >
Carport "1" o-- "0..1" Shed : optionally includes >
Order "1" *-- "1" Orderdetails : consists of >
Orderdetails "1" -- "1..*" Materials

@enduml
